# fifa-wc-fantasy

./: .gitignore  CITATION.cff  README.md  fifa-fantasy-project-sketch.md  pyproject.toml  requirements.txt
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  snapshot_loop.py
docs/: Fantasy.html  Fantasy.md  algorithms-explained.md  api-endpoints.md  approaches.md  baseline.md  data-provenance.md  decisions.md  features.md  gbm.md  hf-release.md  operations.md  optimizer.md  pipeline-walkthrough.md  scoring-rules.md  strength-signals.md  tournament.md
notebooks/: model_evolution.ipynb
paper/: .gitignore  Makefile  paper.out  paper.tex  references.bib  summary.md
results/: 1237d0b5837d_recommendation_ensemble_QF_2026-07-10T01-52-22Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-10T01-52-22Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-10T13-52-48Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-10T13-52-48Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-11T01-53-16Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-11T01-53-16Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-11T13-53-27Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-11T13-53-27Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-12T01-53-43Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-12T01-53-43Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-12T13-53-50Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-12T13-53-50Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-13T01-54-19Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-13T01-54-19Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-13T13-54-38Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-13T13-54-38Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-14T01-54-54Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-14T01-54-54Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-14T13-54-58Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-14T13-54-58Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-15T01-55-02Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-15T01-55-02Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-15T13-55-18Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-15T13-55-18Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-16T01-55-48Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-16T01-55-48Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-16T13-55-59Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-16T13-55-59Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-17T01-56-00Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-17T01-56-00Z.md  1237d0b5837d_recommendation_ensemble_QF_2026-07-17T13-56-32Z.json  1237d0b5837d_recommendation_ensemble_QF_2026-07-17T13-56-32Z.md  1237d0b5837d_recommendation_ensemble_SF_2026-07-12T05-02-19Z.json  1237d0b5837d_recommendation_ensemble_SF_2026-07-12T05-02-19Z.md  1237d0b5837d_recommendation_gbm_QF_2026-07-10T01-52-20Z.json  1237d0b5837d_recommendation_gbm_QF_2026-07-10T01-52-20Z.md  1237d0b5837d_recommendation_gbm_QF_2026-07-10T13-52-47Z.json  1237d0b5837d_recommendation_gbm_QF_2026-07-10T13-52-47Z.md  1237d0b5837d_recommendation_gbm_QF_2026-07-11T01-53-15Z.json  (+219 more)
scripts/: daily-snapshot.sh  (+17 more)
(+237 files in other folders)
