[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-fantasy"
version = "0.0.1"
description = "FIFA Fantasy World Cup 2026 — prediction, optimization, and live decision support."
requires-python = ">=3.12"
authors = [{ name = "predator" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=16",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
