[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-fantasy"
version = "0.0.1"
description = "FIFA Fantasy World Cup 2026 - prediction, optimization, and live decision support."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Asher Davila" }, { name = "Diego Guajardo" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=16",
    "pulp>=2.7",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "joblib>=1.3",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]
# Optional team-news parser source (lazy import, gracefully skipped).
sources = ["soccerdata>=1.8"]
# Companion notebook execution.
analysis = ["jupyter", "nbconvert", "ipykernel"]

[project.urls]
Repository = "https://github.com/AsherDLL/fifa-wc-fantasy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "network: exercises the real network; deselect with -m 'not network'",
]
